# LATTICE

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md  SECURITY.md
.github/workflows/: ci.yml
.roles/: ROLE.md
context/waves/: PHASES.md
context/waves/2026-07-20-public-core/: WAVE.md
context/waves/2026-07-20-public-core/pulses/: pulse-01.md
crates/lattice-core/: Cargo.toml  SPEC.md
crates/lattice-core/src/: lib.rs
crates/lattice-crop/: Cargo.toml  SPEC.md
crates/lattice-crop/src/: lib.rs
crates/lattice-model/: Cargo.toml  SPEC.md
crates/lattice-model/src/: lib.rs
crates/lattice-order/: Cargo.toml  SPEC.md
crates/lattice-order/src/: lib.rs
crates/lattice-registry/: Cargo.toml  SPEC.md
crates/lattice-registry/src/: lib.rs
crates/lattice-store/: Cargo.toml  SPEC.md
crates/lattice-store/src/: lib.rs
docs/: MAINTENANCE.md
