[workspace]
members = [
    "crates/lattice-core",
    "crates/lattice-crop",
    "crates/lattice-model",
    "crates/lattice-order",
    "crates/lattice-registry",
    "crates/lattice-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"
repository = "https://github.com/giodl73-repo/LATTICE"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
