[package]
name = "lattice-crop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
metis-core = { git = "https://github.com/giodl73-repo/METIS-CORE.git", branch = "master" }

[lints]
workspace = true
