[package]
name = "lattice-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
lattice-model = { path = "../lattice-model" }
lattice-registry = { path = "../lattice-registry" }

[lints]
workspace = true
